@@ -239,6 +239,13 @@ no_op_reg_to_regnum (int reg)
   return reg;
 }
 
+/* For use by frame_args_address and frame_locals_address.  */
+CORE_ADDR
+default_frame_address (struct frame_info *fi)
+{
+  return fi->frame;
+}
+
 /* Functions to manipulate the endianness of the target.  */
 
 #ifdef TARGET_BYTE_ORDER_SELECTABLE
