@@ -1,3 +1,15 @@
+2000-12-20  Michael Snyder  <msnyder@mvstp600e.cygnus.com>
+
+	* arch-utils.c (default_frame_address): New function.  Default
+	implementation of frame_args_address and frame_locals_address.
+	* arch-utils.h (default_frame_address): Export.
+	* d10v-tdep.c (d10v_gdbarch_init): Use default_frame_address.
+	(d10v_frame_args_address, d10v_frame_locals_address): Delete.
+	* sh-tdep.c (sh_gdbarch_init): Use default_frame_address.
+	(sh_frame_args_address, sh_frame_locals_address): Delete.
+	* sparc-tdep.c (sparc_gdbarch_init): Use default_frame_address.
+	(sparc_frame_address): Delete.
+
 2000-12-27  Mark Kettenis  <kettenis@gnu.org>
 
 	Fix debugging programs statically linked against the thread library.
